--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="" class="h-full bg-gray-100">
+<html lang="" class="h-full">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
